ai-office-server/kubernetes/argocd/snow-se-tools/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snow-se-tools
  labels:
    istio-injection: enabled
