ai-office-server/kubernetes/argocd/snow-se-tools/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: snow-se-tools
spec:
  selector:
    app: snow-se-tools
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snow-se-tools
  namespace: snow-se-tools
spec:
  replicas: 1
  revisionHistoryLimit: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: snow-se-tools
  template:
    metadata:
      labels:
        app: snow-se-tools
    spec:
      containers:
        - name: webapp
          image: ghcr.io/alexmickelson/snow-se-tools:1.72@sha256:13b35928032c3cadb2b158feee08d156852ecd8182fa39a1e896ccc458ec6944
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
