ai-office-server/kubernetes/argocd/snow-se-tools/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: snow-se-tools
  namespace: snow-se-tools
spec:
  parentRefs:
    - name: mesh
      kind: Mesh
      group: gateway.networking.k8s.io
    - name: main-gateway
      namespace: istio-system
      kind: Gateway
  hostnames:
    - webapp.snow-se-tools.svc.cluster.local
    - alexsnowsetools.snowse.io
    - simplesyllabuscheck.snowse.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webapp
